# QInfo

./: .clang-format  .clang-tidy  .cmake-format.yaml  .editorconfig  .gitignore  .pre-commit-config.yaml  .typos.toml  CMakeLists.txt  README.md
.github/: codecov.yml  release-drafter.yml
.github/workflows/: ci.yml  release-drafter.yml
cmake/: CompilerWarnings.cmake  ExternalDependencies.cmake  qinfo-config.cmake.in
include/: qinfo.h
include/qinfo/: qinfo.h
src/: CMakeLists.txt  qinfo.c
test/: CMakeLists.txt  adddouble.c  addmany.c  create.c  test_qinfo.cpp  value.c
testing/: adddouble.c  addmany.c  create.c  value.c
